--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  scroll-behavior: smooth;
 }
 
 @font-face {
@@ -28,6 +29,10 @@ body {
   overflow-y: hidden;
 }
 
+
+/* page 1 CSS starts from here */
+
+
 #page1 {
   width: 100%;
   height: 100vh;
@@ -38,7 +43,6 @@ body {
 #nav {
   width: 100%;
   height: 120px;
-  /* background-color: red; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -193,12 +197,13 @@ body {
   transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
 
+
 /* page 2 css starts from here */
+
 
 #page2 {
   width: 100%;
   height: calc(100vh + 100px);
-  /* background-color: #a37a7a; */
   position: relative;
   padding-top: 100px;
   margin-top: 100px;
@@ -235,13 +240,11 @@ body {
 #p2tlcontent {
   width: 55%;
   height: 90%;
-
   border: 3px solid black;
   border-radius: 20px;
   box-shadow: 10px 10px;
   display: flex;
   align-items: center;
-
   flex-direction: column;
   padding: 30px;
   text-align: center;
@@ -277,7 +280,6 @@ body {
 #p2btmright {
   width: 50%;
   height: 100%;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -286,13 +288,11 @@ body {
 #p2brcontent {
   width: 55%;
   height: 90%;
-
   border: 3px solid black;
   border-radius: 20px;
   box-shadow: 10px 10px;
   display: flex;
   align-items: center;
-
   flex-direction: column;
   padding: 30px;
   text-align: center;
@@ -318,7 +318,6 @@ body {
 #p2trd1 {
   width: 100%;
   height: 25%;
-
   display: flex;
   align-items: center;
   padding-left: 130px;
@@ -327,7 +326,6 @@ body {
 #p2trd2 {
   width: 100%;
   height: 25%;
-
   display: flex;
   align-items: center;
   padding-left: 130px;
@@ -344,7 +342,6 @@ body {
 #p2trd4 {
   width: 100%;
   height: 25%;
-
   display: flex;
   align-items: center;
   padding-left: 130px;
@@ -369,7 +366,6 @@ body {
 #p2bld1 {
   width: 100%;
   height: 25%;
-
   display: flex;
   align-items: center;
   padding-left: 130px;
@@ -378,7 +374,6 @@ body {
 #p2bld2 {
   width: 100%;
   height: 25%;
-
   display: flex;
   align-items: center;
   padding-left: 130px;
@@ -395,13 +390,14 @@ body {
 #p2bld4 {
   width: 100%;
   height: 25%;
-
   display: flex;
   align-items: center;
   padding-left: 130px;
 }
 
+
 /* page 3 css starts from here */
+
 
 #page3 {
   width: 100%;
@@ -415,7 +411,6 @@ body {
   padding-top: 100px;
   padding-left: 50px;
   padding-right: 50px;
-  /* background-color: lightblue; */
   margin-top: 100px;
 }
 
@@ -467,7 +462,9 @@ body {
   box-shadow: -3px -3px;
 }
 
+
 /* page 4 css starts from here */
+
 
 #page4 {
   width: 100%;
@@ -552,7 +549,6 @@ body {
 
 #condiv p {
   font-weight: 500;
-
   color: #fff;
   width: 80%;
 }
@@ -561,7 +557,9 @@ body {
   top: 0;
 }
 
+
 /* footer css starts from here */
+
 
 #fo {
   width: 100%;
